# fetalmetrics-ai

./: .gitattributes  .gitignore  LICENSE  METHODOLOGY.md  README.md  pyproject.toml
.streamlit/: config.toml
experiments/: segmentation.ipynb
models/: unet_hc.onnx  yolov8_hc.onnx
notebooks/: YOLOv8.ipynb  train_YOLOv8.ipynb  train_unet.ipynb
scripts/: __init__.py  dataset.py  fetch_dataset.py  main.py  preprocess.py  setup.py  validate_onnx.py  validate_preprocessing.py  validate_unet_onnx.py  validate_yolov8_onnx.py
scripts/postprocess/: contour.py  ellipse.py  growth_charts.py
scripts/test/: validate_postprocessing.py  validate_preprocessing.py  validate_unet_onnx.py  validate_yolov8_onnx.py
src/: app.py  config.py
src/assets/: styles.css
src/calibration/: pixel_size.py
src/clinical/: __init__.py  percentiles.py  reference_hadlock.py  risk.py
src/inference/: base.py  registry.py  unet_onnx.py  yolov8_onnx.py
src/pages/: 1_Methodology.py
src/postprocess/: ellipse.py  overlay.py
src/ui/: components.py  theme.py
