[project]
name = "fetalmetrics-ai"
version = "0.1.0"
description = "Automated fetal head circumference measurement from 2D ultrasound"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastai>=2.8.7",
    "kaggle>=2.2.3",
    "kagglehub>=1.0.2",
    "onnxruntime>=1.27.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pyprojroot>=0.3.0",
    "streamlit>=1.58.0",
    "ultralytics>=8.4.81",
]
